# UTOPIA_package

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat  model_tutorial.ipynb  model_tutorial_fiber.ipynb  model_tutorial_sphere.ipynb  montecarlo_tutorial.ipynb  run_utopia_example.py
docs/UTOPIA_MC_simulation_results/: UTOPIA_MC_simulation_outvarnums.json
src/utopia/: RC_generator.py  __init__.py  compartment_classes.py  datasets.py  examples_input.py  generate_rate_constants.py  globalConstants.py  helpers.py  model_tutorial.ipynb  objects_generation.py  particulate_classes.py  readinputs_from_csv.py  solver_steady_state.py  utopia.py
src/utopia/data/: compartment_interactions.csv  custom_data.json  default_config.json  default_data.json  example_data.json  inputs_compartments.csv
src/utopia/monte_carlo/: montecarlo_analysis.py
src/utopia/objects/: box_class.py  compartment_classes.py  particulate_classes.py
src/utopia/preprocessing/: RC_generator.py  create_inputsTable_UTOPIA.py  dry_deposition_MS.py  fill_interactions_df.py  fill_interactions_dictionaries.py  generate_rate_constants.py  objects_generation.py  rc_dry_deposition.py  rc_sea_spray.py  rc_settling.py  rc_wet_deposition.py  readinputs_from_csv.py
src/utopia/results_processing/: emission_fractions_calculation.py  (+5 more)
tests/: model_tutorial.ipynb  settlingVelocity_dataset_Goral_et_al2023.xlsx  test_utopia.py
tests/settlingV/: settlingVtest_XZ.py  settling_velocity_results_comparison.csv  settlingvdata.csv
tests/settlingV_air/: settlingDataset_ESTair.xlsx  settlingVtest_XZ.py  settling_velocity_results.csv  settlingdata_re.csv
